--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@
 
 body {
 	margin: 0;
-	background-image: url(/img/bg.png);
+	background-image: url(/c4-cams/img/bg.png);
 }
 
 .header {
@@ -35,6 +35,7 @@ body {
 	color: #636b5a;
 	cursor: pointer;
 	height: 28px;
+	transition: all 0.2s;
 }
 
 .cam .score .vote.downvote{
@@ -169,6 +170,61 @@ iframe {
 	color: grey;
 	margin-top: 3px; 
 }
+
+.nav_container {
+	width: 100%;
+	margin: auto;
+	text-align: center;
+	margin-bottom: 25px;
+}
+
+.nav_container .back {
+	margin-right: 10px;
+}
+
+
+.header .site_title h1 {
+	margin: 0;
+	padding-left: 15%;
+	padding-top: 10px;
+	color: #278027;
+}
+
+.header .nav {
+	margin-left: 20%;
+	margin-top: 25px;
+}
+
+.header .nav a {
+	font-size: 17px !important;
+	font-family: 'Roboto', sans-serif;
+	font-weight:300 !important;
+	color:white;
+}
+
+.header .nav .item {
+	display: inline;
+	text-decoration: none;
+	transition: all 0.3s;
+}
+
+.header .nav .item:hover {
+	opacity: 0.3;
+	transition: all 0.3s;
+}
+
+.header .nav .item.selected{
+	text-shadow: 0px 0px 15px #85c56a;
+	color: rgba(255,255,255,0.6);
+}
+
+.header .nav .divider {
+	display: inline;
+	margin-left: 25px;
+	margin-right: 25px;
+}
+
+
 
 
 .log {
